fix: apply maximum z-index to the button and popup

--- a/packages/extension-content-ui/src/components/vocably-popup/vocably-popup.scss
+++ b/packages/extension-content-ui/src/components/vocably-popup/vocably-popup.scss
@@ -88,7 +88,7 @@
   }
 
   .content-unlimited {
-    width: 50vw;
+    width: 80vw;
   }
 
   .content {
